fixed flickering!

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -196,6 +196,16 @@ $light: #b9befa;
 
 }
 
+/*
+*
+* Toy page
+*
+*/
+
+.theToyContainer{
+  width: 99.5%;
+  height: 99.5%;
+}
 
 /*
 *
